started on tech tools

--- a/index.html
+++ b/index.html
@@ -23,21 +23,24 @@
             <div class="three"></div>
         </div>
         <ul class="nav_list">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Works</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#works">Works</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
-    <main class="main">
+    <main class="main" id="home">
         <p>I'm a</p>
         <h2>Web Developer.</h2>
         <button>Contact Me</button>
+        <div class="scroll_down">
+            <a href="#about"><i class="fas fa-angle-double-down"></i></a>
+        </div>
     </main>
 
-    <section class="about">
+    <section class="about" id="about">
         <h3>About Me</h3>
         <div class="about_content">
             <div class="about_img">
@@ -54,6 +57,15 @@
                     <a href=""><i class="fab fa-linkedin"></i></a>
                     <a href=""><i class="fab fa-dribbble"></i></a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="tech_tools">
+        <h3>Tech & Tools</h3>
+        <div class="tech_container">
+            <div class="tools">
+
             </div>
         </div>
     </section>
