tools section content

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis repellat amet distinctio totam,
                     assumenda similique quisquam maxime quos quae hic!</p>
                 <div class="socials">
-                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                    <a href=""><i class="fab fa-instagram"></i></a>
-                    <a href=""><i class="fab fa-twitter"></i></a>
-                    <a href=""><i class="fab fa-linkedin"></i></a>
-                    <a href=""><i class="fab fa-dribbble"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-dribbble"></i></a>
                 </div>
             </div>
         </div>
@@ -65,7 +65,44 @@
         <h3>Tech & Tools</h3>
         <div class="tech_container">
             <div class="tools">
-
+                <img src="./assets/tech-assets/html.png" alt="">
+                <p>HTML</p>
+            </div>
+            <div class="tools">
+                <img src="./assets/tech-assets/css.png" alt="">
+                <p>CSS</p>
+            </div>
+            <div class="tools">
+                <img src="./assets/tech-assets/js.png" alt="">
+                <p>Javascript</p>
+            </div>
+            <div class="tools">
+                <img src="./assets/tech-assets/bootstrap.png" alt="">
+                <p>Bootstrap</p>
+            </div>
+            <div class="tools">
+                <img src="./assets/tech-assets/css.png" alt="">
+                <p>CSS</p>
+            </div>
+            <div class="tools">
+                <img src="./assets/tech-assets/css.png" alt="">
+                <p>CSS</p>
+            </div>
+            <div class="tools">
+                <img src="./assets/tech-assets/css.png" alt="">
+                <p>CSS</p>
+            </div>
+            <div class="tools">
+                <img src="./assets/tech-assets/css.png" alt="">
+                <p>CSS</p>
+            </div>
+            <div class="tools">
+                <img src="./assets/tech-assets/css.png" alt="">
+                <p>CSS</p>
+            </div>
+            <div class="tools">
+                <img src="./assets/tech-assets/css.png" alt="">
+                <p>CSS</p>
             </div>
         </div>
     </section>
