--- a/index.html
+++ b/index.html
@@ -81,28 +81,28 @@
                 <p>Bootstrap</p>
             </div>
             <div class="tools">
-                <img src="./assets/tech-assets/css.png" alt="">
-                <p>CSS</p>
+                <img src="./assets/tech-assets/react.png" alt="">
+                <p>React</p>
             </div>
             <div class="tools">
-                <img src="./assets/tech-assets/css.png" alt="">
-                <p>CSS</p>
+                <img src="./assets/tech-assets/git.png" alt="">
+                <p>Git</p>
             </div>
             <div class="tools">
-                <img src="./assets/tech-assets/css.png" alt="">
-                <p>CSS</p>
+                <img src="./assets/tech-assets/github.png" alt="">
+                <p>Github</p>
             </div>
             <div class="tools">
-                <img src="./assets/tech-assets/css.png" alt="">
-                <p>CSS</p>
+                <img src="./assets/tech-assets/figma.png" alt="">
+                <p>Figma</p>
             </div>
             <div class="tools">
-                <img src="./assets/tech-assets/css.png" alt="">
-                <p>CSS</p>
+                <img src="./assets/tech-assets/photoshop.png" alt="">
+                <p>Photoshop</p>
             </div>
             <div class="tools">
-                <img src="./assets/tech-assets/css.png" alt="">
-                <p>CSS</p>
+                <img src="./assets/tech-assets/xd.png" alt="">
+                <p>Adobe XD</p>
             </div>
         </div>
     </section>
