--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
         </div>
     </section>
 
+    <section class="works">
+        <h3>Projects</h3>
+        <div class="works_wrapper">
+            <div class="work_container">
+                <p>Project 1</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque libero ut cumque, corrupti illo omnis.
+                </p>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            </div>
+        </div>
+    </section>
+
     <script src="js/app.js"></script>
 </body>
 
