--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis repellat amet distinctio totam,
                     assumenda similique quisquam maxime quos quae hic!</p>
                 <div class="socials">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-facebook-square"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-linkedin"></i></a>
