--- a/index.html
+++ b/index.html
@@ -117,6 +117,27 @@
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fas fa-external-link-alt"></i></a>
             </div>
+            <div class="work_container">
+                <p>Project 2</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque libero ut cumque, corrupti illo omnis.
+                </p>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            </div>
+            <div class="work_container">
+                <p>Project 3</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque libero ut cumque, corrupti illo omnis.
+                </p>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            </div>
+            <div class="work_container">
+                <p>Project 4</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque libero ut cumque, corrupti illo omnis.
+                </p>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            </div>
         </div>
     </section>
 
