project section responsive fixed, contact section created

--- a/index.html
+++ b/index.html
@@ -141,6 +141,19 @@
         </div>
     </section>
 
+    <section class="contact">
+        <h3>Contact Us</h3>
+        <div class="form_wrapper">
+            <form action="" class="form">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Id">
+                <input type="tel" name="" id="" placeholder="Contact">
+                <textarea name="" id="" rows="4" placeholder="Message"></textarea>
+                <input type="submit" class="btn" value="Submit">
+            </form>
+        </div>
+    </section>
+
     <script src="js/app.js"></script>
 </body>
 
