--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
     </section>
 
-    <section class="works">
+    <section class="works" id="project">
         <h3>Projects</h3>
         <div class="works_wrapper">
             <div class="work_container">
@@ -141,7 +141,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
         <h3>Contact Us</h3>
         <div class="form_wrapper">
             <form action="" class="form">
