--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Me</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="#project">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -61,7 +61,7 @@
         </div>
     </section>
 
-    <section class="tech_tools">
+    <section class="tech_tools" id="skills">
         <h3>Tech & Tools</h3>
         <div class="tech_container">
             <div class="tools">
@@ -153,6 +153,29 @@
             </form>
         </div>
     </section>
+
+    <footer class="footer">
+        <div>
+            <a href="index.html">
+                <img src="./assets/logo-template.png" alt="">
+            </a>
+            <p>Copyright © 2022</p>
+        </div>
+        <div>
+            <ul>
+                <li><a href="">Services</a></li>
+                <li><a href="">Benefits</a></li>
+                <li><a href="">Features</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+        <div>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-facebook-square"></i></a>
+            <a href=""><i class="fab fa-linkedin"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 
     <script src="js/app.js"></script>
 </body>
