--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/6edc3acce4.js" crossorigin="anonymous"></script>
     <title>Home - Portfolio Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/aos.css">
+    <link href="css/fontawesome-all.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navigation">
+    <div class="navigation">
         <div class="brand">
-            <img src="./assets/logo-template.png" alt="Logo">
-
-            <!-- <p>The Brand</p> -->
+            <!-- switch between <img> tag and <p> tag for your brand name -->
+            <a href="index.html">
+                <img src="./assets/logo-template.png" alt="Logo">
+                <!-- <p>The Brand</p> -->
+            </a>
         </div>
         <div class="burger_menu">
             <div class="one"></div>
@@ -29,18 +32,21 @@
             <li><a href="#project">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-    </nav>
+    </div>
 
-    <main class="main" id="home">
-        <p>I'm a</p>
-        <h2>Web Developer.</h2>
-        <button>Contact Me</button>
+    <div class="main" id="home">
+        <div data-aos="fade-up">
+            <p>I'm a</p>
+            <h2>Web Developer.</h2>
+            <button>Contact Me</button>
+
+        </div>
         <div class="scroll_down">
             <a href="#about"><i class="fas fa-angle-double-down"></i></a>
         </div>
-    </main>
+    </div>
 
-    <section class="about" id="about">
+    <div class="about" id="about" data-aos="fade-up">
         <h3>About Me</h3>
         <div class="about_content">
             <div class="about_img">
@@ -59,9 +65,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section class="tech_tools" id="skills">
+    <div class="tech_tools" id="skills" data-aos="fade-up">
         <h3>Tech & Tools</h3>
         <div class="tech_container">
             <div class="tools">
@@ -105,9 +111,9 @@
                 <p>Adobe XD</p>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section class="works" id="project">
+    <div class="works" id="project" data-aos="fade-up">
         <h3>Projects</h3>
         <div class="works_wrapper">
             <div class="work_container">
@@ -139,9 +145,9 @@
                 <a href="#"><i class="fas fa-external-link-alt"></i></a>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section class="contact" id="contact">
+    <div class="contact" id="contact" data-aos="fade-up">
         <h3>Contact Us</h3>
         <div class="form_wrapper">
             <form action="" class="form">
@@ -152,12 +158,13 @@
                 <input type="submit" class="btn" value="Submit">
             </form>
         </div>
-    </section>
+    </div>
 
-    <footer class="footer">
+    <div class="footer">
         <div>
             <a href="index.html">
                 <img src="./assets/logo-template.png" alt="">
+                <!-- <p>The Brand</p> -->
             </a>
             <p>Copyright © 2022</p>
         </div>
@@ -175,8 +182,9 @@
             <a href=""><i class="fab fa-linkedin"></i></a>
             <a href=""><i class="fab fa-instagram"></i></a>
         </div>
-    </footer>
+    </div>
 
+    <script src="js/aos.js"></script>
     <script src="js/app.js"></script>
 </body>
 
