--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         </ul>
     </div>
 
+    <div class="scroll-to-top">
+        <a href="#home"><i class="far fa-caret-square-up"></i></a>
+    </div>
+
     <div class="main" id="home">
         <div data-aos="fade-up">
             <p>I'm a</p>
