--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <title>Title - Portfolio Template</title>
 
     <!-- Styles -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/aos.css">
     <link href="css/fontawesome-all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -209,8 +212,9 @@
         </div> <!--  -->
     </div> <!-- End of footer section -->
 
-    <script src="js/aos.js"></script>
-    <script src="js/app.js"></script>
+    <!-- Scripts -->
+    <script src="js/aos.js"></script> <!-- Animate on scroll library -->
+    <script src="js/app.js"></script> <!-- Custom scripts -->
 </body>
 
 </html>
