--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
     <div class="contact" id="contact" data-aos="fade-up">
         <h3>Contact Us</h3>
         <div class="form_wrapper">
-            <form action="" class="form">
+            <form class="form">
                 <input type="text" placeholder="Full Name">
                 <input type="email" placeholder="Email Id">
-                <input type="tel" name="" id="" placeholder="Contact">
-                <textarea name="" id="" rows="4" placeholder="Message"></textarea>
+                <input type="tel" placeholder="Contact">
+                <textarea rows="4" placeholder="Message"></textarea>
                 <input type="submit" class="btn" value="Submit">
             </form> <!-- End of form -->
         </div> <!-- End of form wrapper -->
